--- a/web/listen.html
+++ b/web/listen.html
@@ -45,9 +45,12 @@
     <main>
         <div id="content">
             <img src="{{.CoverUrl}}" alt="">
-            <p id="title">{{.Series}}: {{.Name}}</p>
-            <p style="color: var(--overlay0); margin-top: 0;">By {{.Author}}.</p>
+            <hgroup style="text-align: center;">
+                <h1 id="title">{{.Series}}: {{.Name}}</h1>
+                <h2 style="color: var(--overlay0); margin-top: 0;">By {{.Author}}.</h2>
+            </hgroup>
             <audio src="{{.File}}" controls></audio>
+            <p class="description">{{.Description}}</p>
         </div>
         <footer>
             <a href="https://github.com/alwaysnur/bookbank" target="_blank" rel="noopener noreferrer">Bookbank</a>
