feat(listen-page): better listen page (#20)
* feat(listen-page): better listen page

* feat(listen-page): update

* fix: merge conflicts

--- a/web/listen.html
+++ b/web/listen.html
@@ -3,14 +3,66 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="id" content="{{.Id}}" id="id">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listening to {{.Name}}</title>
     <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/css/listen.css">
+    <script src="/static/js/listen.js" defer></script>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=cog,headphones,home,logout,menu,search" />
+    <script src="/static/js/index.js" defer></script>
+    <script>
+        const id = document.getElementById("id").content;
+    </script>
 </head>
 
 <body>
-    <p>{{.Name}} file:{{.File}}</p>
-    <audio src="{{.File}}" controls></audio>
+    <nav class="sidebar" id="navbar">
+        <ul>
+            <h2>Bookbank</h2>
+            <a href="/">
+                <li class="nav-item"><span class="material-symbols-rounded">
+                        home
+                    </span><span>Home</span></li>
+            </a>
+            <a href="/library">
+                <li class="nav-item"><span class="material-symbols-rounded">
+                        headphones
+                    </span><span>My Library</span></li>
+            </a>
+            <a href="#">
+                <li class="nav-item"><span class="material-symbols-rounded">
+                        search
+                    </span><span>Search</span></li>
+            </a>
+            <div style="height: 1px;background: var(--overlay0); margin: 1rem 0;"></div>
+            <li class="nav-item"><span>good night</span></li>
+            <li class="nav-item"><span>Logout</span></li>
+        </ul>
+    </nav>
+    <main>
+        <div id="content">
+            <img src="{{.CoverUrl}}" alt="">
+            <hgroup style="text-align: center;">
+                <h1 id="title">{{.Series}}: {{.Name}}</h1>
+                <h2 style="color: var(--overlay0); margin-top: 0;">By {{.Author}}.</h2>
+            </hgroup>
+            <audio src="{{.File}}" controls></audio>
+            <p class="description">{{.Description}}</p>
+        </div>
+        <footer>
+            <a href="https://github.com/alwaysnur/bookbank" target="_blank" rel="noopener noreferrer">Bookbank</a>
+            instance. Made with &lt;3, by <a href="http://github.com/alwaysnur" target="_blank"
+                rel="noopener noreferrer">AlwaysNur</a>.
+        </footer>
+
+    </main>
+    <div id="mask-overlay" style="display:none;"></div>
+    <div id="menu-open-btn" onclick="doNavbar()"><span class="material-symbols-rounded">menu</span></div>
+
+
 </body>
 
 </html>
