feat: show version in footer

--- a/web/listen.html
+++ b/web/listen.html
@@ -53,9 +53,23 @@
             <p class="description">{{.Description}}</p>
         </div>
         <footer>
-            <a href="https://github.com/alwaysnur/bookbank" target="_blank" rel="noopener noreferrer">Bookbank</a>
-            instance. Made with &lt;3, by <a href="http://github.com/alwaysnur" target="_blank"
-                rel="noopener noreferrer">AlwaysNur</a>.
+            <a href="https://github.com/alwaysnur/bookbank" target="_blank" rel="noopener noreferrer">
+                Bookbank
+            </a>instance <span id="version"
+                style="background-color: var(--surface0); padding: 3px; border-radius: 5px;"></span>. Made with
+            &lt;3, by <a href="http://github.com/alwaysnur" target="_blank" rel="noopener noreferrer">AlwaysNur</a>.
+            <div style="height: 1px; background: var(--overlay0); margin: 0.8rem 0">
+            </div>
+            <a href="https://github.com/alwaysnur/bookbank/tree/main/docs" target="_blank" rel="noopener noreferrer"
+                class="footer-link" style="margin-left: 0;">
+                Documentation
+            </a>•
+            <a href="#" target="_blank" rel="noopener noreferrer" class="footer-link">
+                About
+            </a>•
+            <a href="/changelog" target="_blank" rel="noopener noreferrer" class="footer-link">
+                Changelog
+            </a>
         </footer>
 
     </main>
