--- a/web/index.html
+++ b/web/index.html
@@ -18,33 +18,43 @@
         <ul>
             <h2>Bookbank</h2>
             <a href="/">
-                <li class="nav-item"><span class="material-symbols-rounded">
+                <li class="nav-item">
+                    <span class="material-symbols-rounded">
                         home
-                    </span><span>Home</span></li>
+                    </span><span>Home</span>
+                </li>
             </a>
             <a href="/library">
-                <li class="nav-item"><span class="material-symbols-rounded">
+                <li class="nav-item">
+                    <span class="material-symbols-rounded">
                         headphones
-                    </span><span>My Library</span></li>
+                    </span><span>My Library</span>
+                </li>
             </a>
             <a href="#">
-                <li class="nav-item"><span class="material-symbols-rounded">
+                <li class="nav-item">
+                    <span class="material-symbols-rounded">
                         search
-                    </span><span>Search</span></li>
+                    </span><span>Search</span>
+                </li>
             </a>
-            <div style="height: 1px;background: var(--overlay0); margin: 1rem 0;"></div>
+            <div style="height: 1px; background: var(--overlay0); margin: 1rem 0">
+            </div>
             <li class="nav-item"><span>good night</span></li>
             <li class="nav-item"><span>Logout</span></li>
         </ul>
     </nav>
     <main>
         <hgroup>
-            <h1 style="margin: 5px;">Hey {{.Name}},</h1>
-            <h2 style="color: var(--overlay1); margin: 5px;">What would you like to listen to next?</h2>
+            <h1 style="margin: 5px">Hey {{.Name}},</h1>
+            <h2 style="color: var(--overlay1); margin: 5px">
+                What would you like to listen to next?
+            </h2>
         </hgroup>
-        <div style="margin-top: 170px;">
+        <div style="margin-top: 160px;">
             <h3>Continue listening...</h3>
-            <div style="height: 1px;background: var(--overlay0); margin: 1rem 0;"></div>
+            <div style="height: 1px; background: var(--overlay0); margin: 1rem 0">
+            </div>
             <div class="cards-grid">
                 <div class="card">
                     <img src="https://images.unsplash.com/photo-1547191783-94d5f8f6d8b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80"
@@ -59,12 +69,28 @@
             </div>
         </div>
         <footer>
-            <a href="https://github.com/alwaysnur/bookbank" target="_blank" rel="noopener noreferrer">Bookbank</a>
-            instance. Made with &lt;3, by <a href="http://github.com/alwaysnur" target="_blank"
-                rel="noopener noreferrer">AlwaysNur</a>.
-            <div id="mask-overlay" style="display:none;"></div>
+            <a href="https://github.com/alwaysnur/bookbank" target="_blank" rel="noopener noreferrer">
+                Bookbank
+            </a>instance <span id="version"
+                style="background-color: var(--surface0); padding: 3px; border-radius: 5px;"></span>. Made with
+            &lt;3, by <a href="http://github.com/alwaysnur" target="_blank" rel="noopener noreferrer">AlwaysNur</a>.
+            <div style="height: 1px; background: var(--overlay0); margin: 0.8rem 0">
+            </div>
+            <a href="https://github.com/alwaysnur/bookbank/tree/main/docs" target="_blank" rel="noopener noreferrer"
+                class="footer-link" style="margin-left: 0;">
+                Documentation
+            </a>•
+            <a href="#" target="_blank" rel="noopener noreferrer" class="footer-link">
+                About
+            </a>•
+            <a href="/changelog" target="_blank" rel="noopener noreferrer" class="footer-link">
+                Changelog
+            </a>
         </footer>
-        <div id="menu-open-btn" onclick="doNavbar()"><span class="material-symbols-rounded">menu</span></div>
+        <div id="mask-overlay" style="display: none"></div>
+        <div id="menu-open-btn" onclick="doNavbar()">
+            <span class="material-symbols-rounded">menu</span>
+        </div>
     </main>
 </body>
 
