--- a/web/library.html
+++ b/web/library.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/css/index.css">
     <link rel="stylesheet" href="/static/css/library.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=cog,headphones,home,logout,menu,search" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=cog,headphones,home,logout,menu,search,upload" />
     <script src="/static/js/index.js" defer></script>
 </head>
 
@@ -31,6 +31,12 @@
                 <li class="nav-item"><span class="material-symbols-rounded">
                         search
                     </span><span>Search</span></li>
+            </a>
+            <a href="/new">
+                <li class="nav-item"><span class="material-symbols-rounded">
+                        upload
+                    </span><span>Upload Book</span>
+                </li>
             </a>
             <div style="height: 1px;background: var(--overlay0); margin: 1rem 0;"></div>
             <li class="nav-item"><span>good night</span></li>
