fix(mobile, desktop): overflow

--- a/web/index.html
+++ b/web/index.html
@@ -51,26 +51,28 @@
         </ul>
     </nav>
     <main>
-        <hgroup>
-            <h1 style="margin: 5px">Hey {{.Name}},</h1>
-            <h2 style="color: var(--overlay1); margin: 5px">
-                What would you like to listen to next?
-            </h2>
-        </hgroup>
-        <div style="margin-top: 160px;">
-            <h3>Continue listening...</h3>
-            <div style="height: 1px; background: var(--overlay0); margin: 1rem 0">
-            </div>
-            <div class="cards-grid">
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1547191783-94d5f8f6d8b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80"
-                        alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <div class="content">
+            <hgroup>
+                <h1 style="margin: 5px">Hey {{.Name}},</h1>
+                <h2 style="color: var(--overlay1); margin: 5px">
+                    What would you like to listen to next?
+                </h2>
+            </hgroup>
+            <div style="margin-top: 160px;">
+                <h3>Continue listening...</h3>
+                <div style="height: 1px; background: var(--overlay0); margin: 1rem 0">
                 </div>
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1547191783-94d5f8f6d8b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80"
-                        alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <div class="cards-grid">
+                    <div class="card">
+                        <img src="https://images.unsplash.com/photo-1547191783-94d5f8f6d8b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80"
+                            alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                    <div class="card">
+                        <img src="https://images.unsplash.com/photo-1547191783-94d5f8f6d8b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80"
+                            alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
                 </div>
             </div>
         </div>
