--- a/web/library.html
+++ b/web/library.html
@@ -44,7 +44,7 @@
         </ul>
     </nav>
     <main>
-        <div>
+        <div class="content">
             <h1>My Library...</h1>
             <div style="height: 1px;background: var(--overlay0); margin: 1rem 0;"></div>
             <div class="cards-grid">
